# shimlang

./: .drone.yml  .gitignore  AGENTS.md  Cargo.toml  LANGUAGE.md  LICENSE  README.md  benchmark.py  build.zig  build.zig.zon  run_tests  test.shm  test_list  test_shimlang.py  todo.md
.cargo/: config
.github/workflows/: main.yml
acollections/: Cargo.toml
acollections/src/: lib.rs
benchmark_scripts/: gc_bench.py  nbody.shm
benchmark_scripts/gc/: README.md  aliased.shm  closures.shm  deep_chain.shm  dicts.shm  methods.shm  sets.shm  struct_list.shm  tuples.shm
examples/: print_self.shm
libs/libshim/: libshim.zig
libshim/: Cargo.toml
libshim/src/: lib.rs
shimlang/: Cargo.toml
shimlang-wasm/: Cargo.toml  index.html
shimlang-wasm/src/: lib.rs
shimlang/src/: main.rs
shm-tracy/: Cargo.toml
shm-tracy/src/: lib.rs
src/: compile.rs  lex.rs  lib.rs  main.rs  main.zig  mem.rs  parse.rs  parser.zig  runtime.rs  shimlibs.rs
tally-ho/: Cargo.toml
tally-ho/src/: lib.rs
test_scripts/00_basics/: add_overload.shm  add_overload.stdout  and_short_circuit.shm  assignment.shm  bare_block.shm  bare_block.stdout  block_expression.shm  block_expression_if_else.shm  block_expression_if_else.stdout  block_expression_multiple_stmt.shm  bool.shm  compare_overload.shm  compare_overload.stdout  compound_assignment_add.shm  compound_assignment_attr.shm  compound_assignment_div.shm  compound_assignment_edge_cases.shm  compound_assignment_edge_cases.stdout  compound_assignment_index.shm  compound_assignment_index.stdout  compound_assignment_mod.shm  eq_overload.shm  (+90 more)
(+489 files in other folders)
