[package]
name = "shimlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libshim = {path = "../libshim"}
acollections = {path = "../acollections"}

[profile.release]
debug = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
